targets/sol/k3s/authelia/prereqs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia-postgresql
  namespace: base
  labels:
    app.kubernetes.io/instance: authelia
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: authelia
      app.kubernetes.io/name: authelia-postgresql
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: authelia
        app.kubernetes.io/name: authelia-postgresql
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: authelia-db-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia-redis-master
  namespace: base
  labels:
    app.kubernetes.io/instance: authelia
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: authelia
      app.kubernetes.io/name: authelia-redis-master
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: authelia
        app.kubernetes.io/name: authelia-redis-master
    spec:
      securityContext:
        fsGroup: 1001
      containers:
        - name: redis
          image: docker.io/bitnami/redis:latest@sha256:1347d526ecec0c6537e99eac09e7c3405c21664f6044ff60e78b0898da37abd2
          ports:
            - name: tcp-redis
              containerPort: 6379
          readinessProbe:
            tcpSocket:
              port: 6379
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
            initialDelaySeconds: 5
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            limits:
              memory: 2Gi
            requests:
              memory: 128Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: authelia-session-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: authelia-postgresql
  namespace: base
  labels:
    app.kubernetes.io/instance: authelia
spec:
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/name: authelia-postgresql
---
apiVersion: v1
kind: Service
metadata:
  name: authelia-redis-master
  namespace: base
  labels:
    app.kubernetes.io/instance: authelia
spec:
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: tcp-redis
  selector:
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/name: authelia-redis-master
