targets/sol/k3s/authelia/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-authelia-internal
  namespace: base
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: authelia
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: authelia
  policyTypes:
    - Ingress
